Update test to not assume single feature.
Signed-off-by: Santiago Pericas-Geertsen <santiago.pericasgeertsen@oracle.com>